# media-security-audit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  PRODUCT_SPEC.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
docs/: CUSTOMER_FIREWALL_REQUIREMENTS.md  DEPLOYMENT.md  FINAL_VM_APPLIANCE.md  LEGAL_SCOPE.md  METHODOLOGY.md  NEXT_STEPS.md  PRODUCT_UX_TARGET.md  REAL_CONDITION_TEST_RUNBOOK.md  TEST_COVERAGE_CATALOG.md  UI_SPEC.md  USER_INTERVENTIONS.md  V1_RELEASE_CANDIDATE.md  V1_TEST_DEPLOYMENT_PROCEDURE.md
scripts/: debian-vm-backup-inventory.sh  debian-vm-backup-manifest.sh  debian-vm-backup.sh  debian-vm-bootstrap.sh  debian-vm-bundle-inventory.sh  debian-vm-diagnostics.sh  debian-vm-firewall-plan.sh  debian-vm-handoff-bundle.sh  debian-vm-handoff-report.sh  debian-vm-init-env.sh  debian-vm-maintenance-bundle.sh  debian-vm-maintenance-report.sh  debian-vm-offline-update-apply-checklist.sh  debian-vm-offline-update-inventory.sh  debian-vm-offline-update-package.sh  debian-vm-offline-update-plan.sh  debian-vm-offline-update-preview-inventory.sh  debian-vm-offline-update-preview.sh  debian-vm-pilot-closeout.sh  debian-vm-preflight.sh  debian-vm-release-candidate.sh  debian-vm-restart.sh  debian-vm-restore-preview.sh  debian-vm-rotate-password.sh  debian-vm-security-review.sh  debian-vm-start.sh  debian-vm-status.sh  debian-vm-stop.sh  debian-vm-support-bundle.sh  debian-vm-tooling-plan.sh  debian-vm-ui-smoke-test.sh  debian-vm-update-plan.sh  debian-vm-update.sh  debian-vm-v1-readiness-report.sh  debian-vm-verify-backup.sh  (+4 more)
(+365 files in other folders)
